# CI-CD-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: phase-01-notes.md  phase-02-notes.md  phase-03-notes.md
src/: main.py
src/api/: dependencies.py  exception_handlers.py
src/api/routers/: health.py  repository.py
src/api/schemas/: code_analysis.py  health.py  repository.py
src/application/interfaces/: __init__.py  git_provider.py
src/application/services/: code_analyzer.py
src/application/use_cases/: __init__.py  analyze_repository.py  get_repository.py
src/core/: config.py  di_container.py  logging.py
src/domain/entities/: __init__.py  code_analysis.py  repository.py
src/domain/exceptions/: __init__.py  base.py
src/infrastructure/github/: __init__.py  github_adapter.py
tests/: conftest.py
tests/unit/: test_analyze_repository_use_case.py  test_code_analyzer.py  test_get_repository_use_case.py  test_github_adapter.py  test_health.py  test_repository_endpoint.py
