[project]
name = "ai-ci-cd-agent"
version = "0.1.0"
description = "AI-powered CI/CD automation platform, built incrementally phase by phase."
requires-python = ">=3.12"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
